--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app'
 rootProject.name = "CurrencyConverterApp"
-rootProject.buildFileName = 'build.gradle.kts'
+rootProject.buildFileName = 'build.gradle.kts.kts'
